# Metropolia_University_of_Applied_Sciences

./: README.md
assignment_c/: AilleAssignment2.c  BitFields.c  CMakeLists.txt  Delete_str_blank.c  E21.txt  Ex10.c  Ex11.c  Ex12.c  Ex13.c  Ex14.c  Ex15.c  Ex16.c  Ex17.c  Ex18.c  Ex19.c  Ex21.c  F15.txt  FileTest-14.txt  FileTest.c  FileTest.txt  FileTest2-.c  IsNumber.c  MallocAndRealloc.c  Pointest.c  Project_20241009.c  String.c  Student.h  Ville-ex1.c  check_number_range.c  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c  ex6.c  ex7.c  ex8.c  ex9.c  hash_table.c  hash_table.h  (+7 more)
assignment_c/ex20/: CMakeLists.txt  debug.c  debug.h  main.c
assignment_c/ville/: 5-1.c  5-2.c  5-3.c  5-4.c  6-1.c  6-2.c  6-3.c  6-4.c  7-1.c  7-2.c  7-3.c  7-4.c  assignment5_1.txt
final/: CMakeLists.txt  lora.h  lorareceive.py  main.c
final/uart_irq/: main.c  ring_buffer.c
init_project/: main.c
lab1/: main.c  main2.c
lab2/: CMakeLists.txt  main.c  main_test.c
lab3/: CMakeLists.txt  main.c  test_example.c
lab4/: CMakeLists.txt  main (1).c  main.c
lab4/uart_irq/: CMakeLists.txt  ring_buffer.h  uart.c  uart.h
lab5_1/: main.c  test1.c  test3.c
lab5_2/: CMakeLists.txt  main.c  main2.c  test1.c  test2.c  test3.c
project_20241009/: CMakeLists.txt  Project_20241009.c  Temperatures.csv  main.c
