cmake_minimum_required(VERSION 3.29)
project(assignment C)

set(CMAKE_C_STANDARD 11)

add_executable(assignment ex1.c
        ex2.c
        main.c
        test.c
        ex3.c
        ex4.c
        ex5.c
        ex6.c
        Student.h
        ex7.c
        ex8.c
        ex9.c
        FileTest.c
        FileTest2-.c
        cmake-build-debug/dictTets.c
        isNumber.c
        Ville-ex1.c
        Ville-ex1.c
        Ex10.c
        Ex11.c
        Ex12.c
        MallocAndRealloc.c
        String.c
        Pointest.c
        Ex13.c
        Ex14.c
        Ex15.c
        AilleAssignment2.c
        ifdefendif.c
        BitFields.c
        point_function_test.c
        sort_test_qsort.c
        main_argc_argv.c
        Ex16.c
        check_number_range.c
        Ex17.c
        shuffle_array.c
        Ex18.c
        Ex19.c
        Project_20241009.c
        hash_table.h
        hash_table.c
        Delete_str_blank.c
        ex20/main.c
        ex20/debug.c
        Ex21.c
        ville/5-1.c
        ville/5-2.c
        ville/5-3.c
        ville/5-4.c
        ville/6-1.c
        ville/6-2.c
        ville/6-3.c
        ville/6-4.c
        ville/7-1.c
        ville/7-2.c
        ville/7-3.c
        ville/7-4.c
)
